<resources>
    <string name="app_name">Observations</string>
    <string name="ButtonRR">Blutdruck</string>
    <string name="ButtonBMI">BMI</string>
    <string name="ButtonBZ">Blutzucker</string>

    <!-- BMI Layout -->
    <string name="headerCalculator">"BMI-Rechner:"</string>
    <string name="headerHeight">"Größe:"</string>
    <string name="unitHeight">"m"</string>
    <string name="headerWeight">"Gewicht:"</string>
    <string name="unitWeight">"kg"</string>
    <string name="headerBMI">"BMI="</string>
    <string name="btnCalculateBMI">"Berechnen"</string>
    <string name="btnBack">"Zurück"</string>
    <string name="inputError">"Alle Werte müssen ausgefüllt werden!"</string>
    <string name="ok">"Ok"</string>

    <!-- BZ Layout -->
    <string name="saveBZ">"Speichern"</string>
    <string name="headerBZ">"Blutzucker"</string>
    <string name="switchMG">"mg/dl"</string>
    <string name="switchMMOL">"mmol/l"</string>
    <string name="headerBZmethods">"Methode der Diagnostik"</string>
    <string name="btnGelegenheit">"Gelegenheitsdiagnose"</string>
    <string name="btnOGTT">"oGTT"</string>
    <string name="btnHämo">"über Hämoglobin HbA1c"</string>
    <string name="btnHarn">"Harnuntersuchung"</string>
    <string name="textEinheit">"Einheit auswählen:"</string>

    <!-- RR Layout -->
    <string name="saveRR">"Speichern"</string>
    <string name="headerRR">"Blutdruck"</string>
    <string name="strich">"/"</string>
    <string name="einheitRR">"mmHg"</string>
    <string name="headerPulse">"Puls"</string>
    <string name="headerSubRR">"Blutdruck"</string>



</resources>
