<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonRR"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:background="#F44336"
        android:onClick="onClickSwitchToRR"
        android:text="@string/ButtonRR" />

    <Button
        android:id="@+id/buttonBMI"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonRR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#F44336"
        android:onClick="onClickSwitchToBMI"
        android:text="@string/ButtonBMI" />

    <Button
        android:id="@+id/buttonBZ"

        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonBMI"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#F44336"
        android:onClick="onClickSwitchToBZ"
        android:text="@string/ButtonBZ" />

    <Spinner
        android:id="@+id/patientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="100dp" />

</android.widget.RelativeLayout>